# cs430-proj4-raytracing

./: .gitignore  4_lights_sphere.json  CMakeLists.txt  README.md  brandon.json  empty.json  image.ppm  out.ppm  out2.ppm  pointlight.json  project_test_file.json  simple_refraction.json  spotlight.json  test_scene.json
include/: base.h  illumination.h  json.h  ppmrw.h  raytracer.h  vector_math.h
src/: illumination.c  json.c  main.c  ppmrw.c  raytracer.c
